--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <div class="text-center"><a href="#" class="btn-submit">Download Resume</a></div>
+          <div class="text-center"><a href="https://drive.google.com/file/d/1eHEQS3MBPN_QHrrrX_qI8imU4tYp5ewn/view?usp=sharing" class="btn-submit">Download Resume</a></div>
         </div>
 
         <!-- <div class="row">
