--- a/index.html
+++ b/index.html
@@ -89,19 +89,52 @@
             <img src="assets/img/aldibg.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Android Developer.</h3>
+            <h3>Android Developer</h3>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>8 April 2001</span></li>
+                  <table width="100%">
+                    <tbody>
+                      <tr>
+                        <td style="padding: 5px;"><i class="bi bi-chevron-right"></i> <strong>Birthday</strong></td>
+                        <td style="padding: 5px;">:</td>
+                        <td style="padding: 5px;">8 April 2001</td>
+                      </tr>
+                      <tr>
+                        <td style="padding: 5px;"><i class="bi bi-chevron-right"></i> <strong>Phone</strong></td>
+                        <td style="padding: 5px;">:</td>
+                        <td style="padding: 5px;">+62 882 2940 4102</td>
+                      </tr>
+                      <tr>
+                        <td style="padding: 5px;"><i class="bi bi-chevron-right"></i> <strong>City</strong></td>
+                        <td style="padding: 5px;">:</td>
+                        <td style="padding: 5px;">Bandung, Indonesia</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>8 April 2001</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+62 882 2940 4102</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bandung, Indonesia</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bandung, Indonesia</span></li> -->
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>aldisaepurahman@gmail.com</span></li>
+                  <table width="100%">
+                    <tbody>
+                      <tr>
+                        <td style="padding: 5px;"><i class="bi bi-chevron-right"></i> <strong>Age</strong></td>
+                        <td style="padding: 5px;">:</td>
+                        <td style="padding: 5px;">21</td>
+                      </tr>
+                      <tr>
+                        <td style="padding: 5px;"><i class="bi bi-chevron-right"></i> <strong>Email:</strong></td>
+                        <td style="padding: 5px;">:</td>
+                        <td style="padding: 5px;">aldisaepurahman@gmail.com</td>
+                      </tr>
+                      </tbody>
+                  </table>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>aldisaepurahman@gmail.com</span></li> -->
                 </ul>
               </div>
             </div>
@@ -116,7 +149,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Certifications Section ======= -->
-    <section id="skills" class="skills section-bg">
+    <section id="skills" class="skills certification section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -316,8 +349,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/football_standings.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/football_standings.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Football App"><i class="bx bx-plus"></i></a>
-                <a href="portfolio_pages/football-app-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/football_standings.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Football App"><i class="bx bxs-zoom-in"></i></a>
+                <a href="portfolio_pages/football-app-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
               </div>
             </div>
           </div>
@@ -326,8 +359,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bxs-zoom-in"></i></a>
+                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
               </div>
             </div>
           </div>
@@ -336,8 +369,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bxs-zoom-in"></i></a>
+                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
               </div>
             </div>
           </div>
@@ -346,8 +379,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bxs-zoom-in"></i></a>
+                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
               </div>
             </div>
           </div>
@@ -356,8 +389,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bxs-zoom-in"></i></a>
+                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
               </div>
             </div>
           </div>
@@ -366,8 +399,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bxs-zoom-in"></i></a>
+                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
               </div>
             </div>
           </div>
@@ -376,8 +409,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bxs-zoom-in"></i></a>
+                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
               </div>
             </div>
           </div>
@@ -386,8 +419,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bxs-zoom-in"></i></a>
+                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
               </div>
             </div>
           </div>
@@ -396,8 +429,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bxs-zoom-in"></i></a>
+                <a href="portfolio_pages/portfolio-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
               </div>
             </div>
           </div>
@@ -451,19 +484,19 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
+                <h4>Location</h4>
                 <p>Jl. Soekarno-Hatta Gg. Elos Barat RT 06/05 Babakan Ciparay, Bandung, Indonesia</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
+                <h4>Email</h4>
                 <p>aldisaepurahman@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bx bxl-whatsapp"></i>
-                <h4>Call to Whatsapp:</h4>
+                <h4>Call to Whatsapp</h4>
                 <p>+62 882 2940 4102</p>
               </div>
 
