Update Skills Item

--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
         <img src="assets/img/aldi128px.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Aldi Saepurahman</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.facebook.com/aldi.saepurahman/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/aldisaep_/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/aldi-saepurahman/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/aldisaepurahman/" class="github" target="_blank"><i class="bx bxl-github"></i></a>
         </div>
@@ -216,6 +214,10 @@
             </div>
 
             <div class="progress">
+              <span class="skill">Android With Kotlin <i class="val">Expert</i></span>
+            </div>
+
+            <div class="progress">
               <span class="skill">Git <i class="val">Intermediate</i></span>
             </div>
 
@@ -233,6 +235,10 @@
 
             <div class="progress">
               <span class="skill">Reactive Programming <i class="val">Beginner</i></span>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Flutter <i class="val">Beginner</i></span>
             </div>
 
             <div class="progress">
