Update about content

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="hero-container" data-aos="fade-in">
       <img src="assets/img/aldi128px.jpg" alt="" class="img-fluid rounded-circle">
       <h1>Aldi Saepurahman</h1>
-      <p>I'm <span class="typed" data-typed-items="Android Developer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Android Developer and Mobile Enthusiast"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -87,7 +87,7 @@
             <img src="assets/img/aldibg.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Android Developer</h3>
+            <h3>Android Developer & Mobile Enthusiast</h3>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -137,7 +137,8 @@
               </div>
             </div>
             <p>
-              Have a year of experience in Android Programming using Kotlin, have good time management skills, excellent logical skills and algorithmic thinking,
+              I have an interest in Mobile Development, like Android and iOS Development. I have a year of experience in Android Programming using Kotlin,
+              then interested in learning Flutter to develop multi-platform application, and then have good time management skills, excellent logical skills and algorithmic thinking,
               and a strong understanding of Android Programming such as connecting the application with API, and have become a Google Certified Associate Android Developer.
             </p>
           </div>
