add heal and go and repair spelling

--- a/portfolio_pages/football-app-details.html
+++ b/portfolio_pages/football-app-details.html
@@ -126,16 +126,16 @@
             <div class="portfolio-description">
               <h2>About Football App</h2>
               <p style="text-align: justify;">
-                Football App is the application which used to show all teams from a certain league, such as an entire team from English Premier League like Arsenal, Chelsea, etc.
-                You can view all the details from each team and add the team to your favorite list. You can also view all league standings to get more update about your favorite team in domestic league.
-                This application develop using Clean Architecture, Reactive Programming with Coroutine Flow, Koin library for Dependency Injection, Modularization and Dynamic Feature on Favorite feature, CI/CD development with CircleCI, and Security Feature.
+                Football App is an application which used to show all teams from a certain league, such as an entire team from English Premier League like Arsenal, Chelsea, etc.
+                You can view all the details from each team and add the team to your favorite list. You can also view all league standings to get more updates about your favorite team in the domestic league.
+                This application develops using Clean Architecture, Reactive Programming with Coroutine Flow, Koin library for Dependency Injection, Modularization and Dynamic Feature on Favorite feature, CI/CD development with CircleCI, and Security Feature.
               </p>
               <h2>Story Behind Development</h2>
               <p style="text-align: justify;">
-                This application has been created when i was still in Bangkit Academy. I have to complete the expert course with created an Android application using Clean Architecture, Reactive Programming, Dependency Injection, Modularization and Dynamic Feature, CI/CD,
-                and Security Feature in that application. Bangkit Team give me 3 months time for builded this application until complete from July because the expert course was given at the end of Bangkit program, but i want to complete my application in 2 weeks time because
-                i should back to my University in August to continue my study. Because that, i was overwhelming to complete the application and looked up various solution to complete that, and i did not take more points from my submission to complete that using a solution other
-                than the one provided by Bangkit Team. More than that, i found some error and bug when i builded this application like error when implemented Coroutine Flow and dependency problem because i implemented Dynamic Feature so that i needed more time than 2 weeks to
+                This application has been created when I was still at Bangkit Academy. I have to complete the expert course in creating an Android application using Clean Architecture, Reactive Programming, Dependency Injection, Modularization, and Dynamic Feature, CI/CD,
+                and Security Features in that application. Bangkit Team give me 3 months' time to builded this application until complete in July because the expert course was given at the end of the Bangkit program, but I want to complete my application in 2 weeks' time because
+                I should back to my University in August to continue my study. Because of that, I was overwhelmed to complete the application and looked up various solutions to complete that, and I did not take more points from my submission to complete that using a solution other
+                than the one provided by Bangkit Team. More than that, I found some errors and bugs when i builded this application like errors when implemented Coroutine Flow and dependency problems because I implemented Dynamic Feature so that I needed more time than 2 weeks to
                 complete this application.
               </p>
               <p style="text-align: justify;">
