--- a/index.html
+++ b/index.html
@@ -393,22 +393,22 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/healandgo/recommendation.gif" alt="" height="200">
+              <div class="portfolio-links">
+                <a href="assets/img/healandgo/recommendation.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Heal & Go"><i class="bx bxs-zoom-in"></i></a>
+                <a href="portfolio_pages/heal-and-go-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/tripaja/img-preview.png" alt="" height="200">
               <div class="portfolio-links">
                 <a href="assets/img/tripaja/img-preview.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Trip Aja"><i class="bx bxs-zoom-in"></i></a>
                 <a href="portfolio_pages/trip-aja-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/onprogres-placeholder.jpg" alt="" height="200">
-              <div class="portfolio-links">
-                <a href="assets/img/onprogres-placeholder.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bxs-zoom-in"></i></a>
-                <a href="portfolio_pages/portfolio-details.html" style="pointer-events: none" title="More Details"><i class="bx bxs-info-circle"></i></a>
               </div>
             </div>
           </div>
