--- a/portfolio_pages/trip-aja-details.html
+++ b/portfolio_pages/trip-aja-details.html
@@ -105,18 +105,18 @@
             <div class="portfolio-description">
               <h2>Story Behind Development</h2>
               <p style="text-align: justify;">
-                To be honest, this application have been builded when i still in Bangkit Program, but that was still in Kotlin version with the application name.
-                is "Heal & Go". So, when i come back to my study in university, i want to builded that in Flutter version to complete my subjects about Mobile Programming in
-                my study with my beloved friends in university. To convert this program into Flutter, effectively takes 2-3 weeks to completed this. But,
-                because i with my friends didn't take only Mobile Programming subjects in this semester, the development for this program take until 2 months
-                including backend implementation to the application. When we developed this program to Flutter, we found some problem like overflow page in
-                the application UI, misscolored the background, problem to implemented MVVM into this application, and problem about where the Machine Learning
+                To be honest, this application has been builded when I was still in Bangkit Program, but that was still in the Kotlin version with the application name.
+                is "Heal & Go". So, when I come back to my study at university, I want to build that in Flutter version to complete my subjects about Mobile Programming in
+                my study with my beloved friends in university. Convert this program into Flutter, effectively takes 2-3 weeks to complete this. But,
+                because my friends and I didn't take only Mobile Programming subjects this semester, the development for this program take until 2 months
+                including the backend implementation of the application. When we developed this program to Flutter, we found some problems like an overflow page in
+                the application UI, miscolored the background, problems to implemented MVVM into this application, and problems with where the Machine Learning
                 model can be stored to called by the application because this application needed Machine Learning to run the recommendation.
               </p>
               <p style="text-align: justify;">
-                After exhausting 2 months, we can completed this application in Flutter version and test that to public, and with Usability Testing, our application
-                can reach 89%, which means our application is so good to used by public. Even so, more people give the suggestion about to include localization or
-                Indonesia language to this program because this program only have English language, and then give more content about the destination detail to the application.
+                After exhausting 2 months, we can completed this application in the Flutter version and tested that for the public, and with Usability Testing, our application
+                can reach 89%, which means our application is so good to use by the public. Even so, more people suggest about to include localization or
+                Indonesia language to this program because this program only has the English language, and then gives more content about the destination detail to the application.
                 You can try this application in this <a href="https://drive.google.com/file/d/1Bs4gDo5PAhxltpjIadFWPk_aKIniH7Vj/view?usp=sharing" target="_blank" title="More Details">page</a>.
               </p>
               <p style="text-align: justify;">
@@ -129,9 +129,9 @@
                 <li><b>Homepage</b>, you will find your top recommendation list in this page based on your preference and app's recommendation.</li>
                 <li><b>Discover</b>, you will find all of destination list in this page, and you can find the destination based on search by keyword or category.</li>
                 <li><b>Profile</b>, you can see your detail information in this page, and you can go out from main application to Login page using Logout button in this page.</li>
-                <li><b>Questionnaire</b>, If you want to get your recommendation, you must answer all of the questions in this features.</li>
-                <li><b>Card Recommendations</b>, after you answer all of the questions, the application will give you some recommendations about destination in the Card Stack form.
-                You can like or dislike all of the recommendations that given by the app using the button or swipe the card.
+                <li><b>Questionnaire</b>, If you want to get your recommendation, you must answer all of the questions in these features.</li>
+                <li><b>Card Recommendations</b>, after you answer all of the questions, the application will give you some recommendations about the destination in the Card Stack form.
+                  You can like or dislike all of the recommendations given by the app using the button or swiping the card.
                 </li>
               </ul>
               <h2>Credits</h2>
