repair information in heal & go and trip aja

--- a/portfolio_pages/heal-and-go-details.html
+++ b/portfolio_pages/heal-and-go-details.html
@@ -154,8 +154,11 @@
               <img src="../assets/img/healandgo/recommendation.gif" alt="" height="400">
               <h2>Credits</h2>
               <p style="text-align: justify;">
-                Huge thanks to my beloved friends to help me in developed this application into Flutter version, <a href="https://www.linkedin.com/in/muh-ilham-malik/" target="_blank" title="More Details">Muhammad Ilham Malik</a>,
+                Huge thanks to my beloved friends to help me in developed this application, <a href="https://www.linkedin.com/in/muh-ilham-malik/" target="_blank" title="More Details">Muhammad Ilham Malik</a>,
                 <a href="https://www.linkedin.com/in/hfayuwardana" target="_blank" title="More Details">Christina Prilla Rosaria Ardyanti</a>, I Wayan Pande Putra, Hubertus Hans, Nur Ridho Rizki.
+              </p>
+              <p style="text-align: justify;">
+                Also Read: <a href="../portfolio_pages/trip-aja-details.html" title="More Details">Trip Aja</a>
               </p>
             </div>
           </div>
