--- a/portfolio_pages/trip-aja-details.html
+++ b/portfolio_pages/trip-aja-details.html
@@ -137,7 +137,10 @@
               <h2>Credits</h2>
               <p style="text-align: justify;">
                 Huge thanks to my beloved friends to help me in developed this application into Flutter version, <a href="https://www.linkedin.com/in/muh-ilham-malik/" target="_blank" title="More Details">Muhammad Ilham Malik</a>, 
-                <a href="https://www.linkedin.com/in/prillarosaria" target="_blank" title="More Details">Hikmawati Fajriah Ayu Wardana</a>, <a href="https://www.linkedin.com/in/hfayuwardana" target="_blank" title="More Details">Christina Prilla Rosaria Ardyanti</a>.
+                <a href="https://www.linkedin.com/in/hfayuwardana" target="_blank" title="More Details">Hikmawati Fajriah Ayu Wardana</a>, <a href="https://www.linkedin.com/in/prillarosaria" target="_blank" title="More Details">Christina Prilla Rosaria Ardyanti</a>.
+              </p>
+              <p style="text-align: justify;">
+                Also Read: <a href="../portfolio_pages/heal-and-go-details.html" title="More Details">Heal & Go</a>
               </p>
             </div>
           </div>
