repair margin in heal & go

--- a/portfolio_pages/heal-and-go-details.html
+++ b/portfolio_pages/heal-and-go-details.html
@@ -152,7 +152,7 @@
               <p style="text-align: justify; margin-top: 50px"><b>Card Recommendations</b>, after you answer all of the questions, the application will give you some recommendations about the destination in the Card Stack form.
                 You can like or dislike all of the recommendations given by the app using the button or swiping the card.</p>
               <img src="../assets/img/healandgo/recommendation.gif" alt="" height="400">
-              <h2>Credits</h2>
+              <h2 style="text-align: justify; margin-top: 50px">Credits</h2>
               <p style="text-align: justify;">
                 Huge thanks to my beloved friends to help me in developed this application, <a href="https://www.linkedin.com/in/muh-ilham-malik/" target="_blank" title="More Details">Muhammad Ilham Malik</a>,
                 <a href="https://www.linkedin.com/in/hfayuwardana" target="_blank" title="More Details">Christina Prilla Rosaria Ardyanti</a>, I Wayan Pande Putra, Hubertus Hans, Nur Ridho Rizki.
