add stikes porto

--- a/portfolio_pages/trip-aja-details.html
+++ b/portfolio_pages/trip-aja-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Football App</title>
+  <title>Portfolio Details - Trip Aja</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -51,7 +51,7 @@
         <ul>
           <li><a href="../index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="../index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="../index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="../index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>CV</span></a></li>
           <li><a href="../index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <!-- <li><a href="../index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="../index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
@@ -134,7 +134,20 @@
                   You can like or dislike all of the recommendations given by the app using the button or swiping the card.
                 </li>
               </ul>
-              <h2>Credits</h2>
+              <h2 style="text-align: justify; margin-top: 50px">My Role</h2>
+              <ul>
+                <li>
+                  Dividing tasks for each team member within developing TripAja applications, such as sharing feature work
+                </li>
+                <li>
+                  Developing the TripAja application architecture in the form Model-View-ViewModel (MVVM)
+                </li>
+                <li>
+                  Developing Questionnaire & Recommendation features Card, both UI/UX and feature integration to API
+                </li>
+                <li>Integrate all features of the database & API</li>
+              </ul>
+              <h2 style="text-align: justify; margin-top: 50px">Credits</h2>
               <p style="text-align: justify;">
                 Huge thanks to my beloved friends to help me in developed this application into Flutter version, <a href="https://www.linkedin.com/in/muh-ilham-malik/" target="_blank" title="More Details">Muhammad Ilham Malik</a>, 
                 <a href="https://www.linkedin.com/in/hfayuwardana" target="_blank" title="More Details">Hikmawati Fajriah Ayu Wardana</a>, <a href="https://www.linkedin.com/in/prillarosaria" target="_blank" title="More Details">Christina Prilla Rosaria Ardyanti</a>.
