--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>CV</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
@@ -64,7 +64,9 @@
     <div class="hero-container" data-aos="fade-in">
       <img src="assets/img/aldi128px.jpg" alt="" class="img-fluid rounded-circle">
       <h1>Aldi Saepurahman</h1>
-      <p>I'm <span class="typed" data-typed-items="Mobile Enthusiast"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Mobile Developer"></span></p>
+      <a href="#portfolio" class="btn btn-secondary">See Portfolio</a>
+        <a href="https://www.linkedin.com/in/aldi-saepurahman/" target="_blank" class="btn btn-light">See My Linkedin</a>
     </div>
   </section><!-- End Hero -->
 
@@ -87,7 +89,7 @@
             <img src="assets/img/aldibg.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Mobile Enthusiast</h3>
+            <h3>Mobile Developer</h3>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -302,7 +304,7 @@
 
         <div class="section-title">
           <h2>CV</h2>
-          <div class="text-center"><a href="https://drive.google.com/file/d/1eHEQS3MBPN_QHrrrX_qI8imU4tYp5ewn/view?usp=sharing" class="btn-submit">Download CV</a></div>
+          <div class="text-center"><a href="https://drive.google.com/file/d/1i7NlTP83aPcS1af2f_u4Ufq3_6D6sDtz/view?usp=sharing" target="_blank" class="btn-submit">Download CV</a></div>
         </div>
 
         <!-- <div class="row">
@@ -385,19 +387,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/football_standings.png" alt="" height="200">
+              <img src="assets/img/healandgo/img-preview.png" alt="" height="200">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/football_standings.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Football App"><i class="bx bxs-zoom-in"></i></a>
-                <a href="portfolio_pages/football-app-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/healandgo/recommendation.gif" alt="" height="200">
-              <div class="portfolio-links">
-                <a href="assets/img/healandgo/recommendation.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Heal & Go"><i class="bx bxs-zoom-in"></i></a>
+                <a href="assets/img/healandgo/img-preview.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Heal & Go"><i class="bx bxs-zoom-in"></i></a>
                 <a href="portfolio_pages/heal-and-go-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
               </div>
             </div>
@@ -409,6 +401,26 @@
               <div class="portfolio-links">
                 <a href="assets/img/tripaja/img-preview.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Trip Aja"><i class="bx bxs-zoom-in"></i></a>
                 <a href="portfolio_pages/trip-aja-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/stikes/img-preview.png" alt="" height="200">
+              <div class="portfolio-links">
+                <a href="assets/img/stikes/img-preview.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sistem Informasi Akuntansi STIKes Santo Borromeus"><i class="bx bxs-zoom-in"></i></a>
+                <a href="portfolio_pages/stikes-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/img-preview.png" alt="" height="200">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/img-preview.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Football App"><i class="bx bxs-zoom-in"></i></a>
+                <a href="portfolio_pages/football-app-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
               </div>
             </div>
           </div>
