--- a/portfolio_pages/football-app-details.html
+++ b/portfolio_pages/football-app-details.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a href="../index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="../index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="../index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="../index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>CV</span></a></li>
           <li><a href="../index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="../index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
@@ -97,7 +97,11 @@
 
         </div>
 
-          <div class="col-lg-12">
+        <div class="col-lg-12">
+          <iframe src="../assets/img/portfolio/Football-App.pdf" width="100%" height="700"></iframe>
+        </div>
+
+          <!-- <div class="col-lg-12">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -120,7 +124,7 @@
               </div>
               <div class="swiper-pagination"></div>
             </div>
-          </div>
+          </div> -->
 
           <div id="descriptions" class="col-lg-12">
             <div class="portfolio-description">
