--- a/portfolio_pages/heal-and-go-details.html
+++ b/portfolio_pages/heal-and-go-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Football App</title>
+  <title>Portfolio Details - Heal And Go</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -51,7 +51,7 @@
         <ul>
           <li><a href="../index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="../index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="../index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="../index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>CV</span></a></li>
           <li><a href="../index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="../index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
@@ -97,30 +97,9 @@
 
         </div>
 
-          <!-- <div class="col-lg-12">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/football_homepage.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/football_standings.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/football_team_detail.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/football_dynamic_feature_favorite.png" alt="">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-          </div> -->
+        <div class="col-lg-12">
+          <iframe src="../assets/img/healandgo/healandgo.pdf" width="100%" height="700"></iframe>
+        </div>
 
           <div id="descriptions" class="col-lg-12">
             <div class="portfolio-description">
@@ -152,6 +131,22 @@
               <p style="text-align: justify; margin-top: 50px"><b>Card Recommendations</b>, after you answer all of the questions, the application will give you some recommendations about the destination in the Card Stack form.
                 You can like or dislike all of the recommendations given by the app using the button or swiping the card.</p>
               <img src="../assets/img/healandgo/recommendation.gif" alt="" height="400">
+              <h2 style="text-align: justify; margin-top: 50px">My Role</h2>
+              <ul>
+                <li>
+                  Work closely with the team, including with team members Android to develop Heal&Go applications
+                </li>
+                <li>
+                  Designing some required assets and component on application
+                </li>
+                <li>
+                  Develop application architecture in the form of MVVM
+                </li>
+                <li>Integrate applications with database & API on
+                  Google Cloud</li>
+                <li>Designing the logic of the Discover feature, Recommendation Card,
+                  and Login & Register</li>
+              </ul>
               <h2 style="text-align: justify; margin-top: 50px">Credits</h2>
               <p style="text-align: justify;">
                 Huge thanks to my beloved friends to help me in developed this application, <a href="https://www.linkedin.com/in/muh-ilham-malik/" target="_blank" title="More Details">Muhammad Ilham Malik</a>,
