--- a/index.html
+++ b/index.html
@@ -244,23 +244,27 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Dart <i class="val">Intermediate</i></span>
+              <span class="skill">Dart <i class="val">Advanced</i></span>
             </div>
 
             <div class="progress">
-              <span class="skill">Android With Kotlin <i class="val">Expert</i></span>
+              <span class="skill">Java <i class="val">Advanced</i></span>
             </div>
 
             <div class="progress">
-              <span class="skill">Git <i class="val">Intermediate</i></span>
+              <span class="skill">C++ <i class="val">Intermediate</i></span>
             </div>
 
             <div class="progress">
-              <span class="skill">Clean Architecture with MVVM <i class="val">Intermediate</i></span>
+              <span class="skill">Kotlin Android <i class="val">Expert</i></span>
             </div>
 
             <div class="progress">
-              <span class="skill">API Networking with App <i class="val">Intermediate</i></span>
+              <span class="skill">Flutter Android <i class="val">Advanced</i></span>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Reactive Programming <i class="val">Intermediate</i></span>
             </div>
 
           </div>
@@ -268,27 +272,31 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Reactive Programming <i class="val">Intermediate</i></span>
+              <span class="skill">Git <i class="val">Advanced</i></span>
             </div>
 
             <div class="progress">
-              <span class="skill">Flutter <i class="val">Intermediate</i></span>
+              <span class="skill">Clean Architecture <i class="val">Intermediate</i></span>
             </div>
 
             <div class="progress">
-              <span class="skill">UI/UX Design <i class="val">Intermediate</i></span>
+              <span class="skill">API Networking <i class="val">Advanced</i></span>
             </div>
 
             <div class="progress">
-              <span class="skill">Problem Solving <i class="val">High</i></span>
+              <span class="skill">Problem Solving <i class="val">Advanced</i></span>
             </div>
 
             <div class="progress">
-              <span class="skill">Leadership <i class="val">High</i></span>
+              <span class="skill">Leadership <i class="val">Advanced</i></span>
             </div>
 
             <div class="progress">
-              <span class="skill">Communication in English <i class="val">Moderate</i></span>
+              <span class="skill">Communication <i class="val">Advanced</i></span>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Teamwork <i class="val">Advanced</i></span>
             </div>
 
           </div>
