add rongga portofolio

--- a/index.html
+++ b/index.html
@@ -435,10 +435,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/onprogres-placeholder.jpg" alt="" height="200">
+              <img src="assets/img/rongga/img-preview.png" alt="" height="200">
               <div class="portfolio-links">
-                <a href="assets/img/onprogres-placeholder.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bxs-zoom-in"></i></a>
-                <a href="portfolio_pages/portfolio-details.html" style="pointer-events: none" title="More Details"><i class="bx bxs-info-circle"></i></a>
+                <a href="assets/img/rongga/img-preview.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Rongga"><i class="bx bxs-zoom-in"></i></a>
+                <a href="portfolio_pages/rongga-details.html" title="More Details"><i class="bx bxs-info-circle"></i></a>
               </div>
             </div>
           </div>
