--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">API Networking <i class="val">Advanced</i></span>
+              <span class="skill">Connect to API <i class="val">Advanced</i></span>
             </div>
 
             <div class="progress">
@@ -312,7 +312,7 @@
 
         <div class="section-title">
           <h2>CV</h2>
-          <div class="text-center"><a href="https://drive.google.com/file/d/1ks3FI_v8I49CBaXvNSj75paQeduiUapG/view?usp=sharing" target="_blank" class="btn-submit">Download CV</a></div>
+          <div class="text-center"><a href="https://drive.google.com/file/d/18gscNwHqJR8TUrXF0x5sSNbvZncyk9AF/view?usp=sharing" target="_blank" class="btn-submit">Download CV</a></div>
         </div>
 
         <!-- <div class="row">
