add website link

--- a/portfolio_pages/rongga-details.html
+++ b/portfolio_pages/rongga-details.html
@@ -111,7 +111,7 @@
                 all these problems were resolved.
               </p>
               <p style="text-align: justify;">
-                This application is designed with the aim of assisting counseling teachers at a Junior High School under study in grouping student rombles 
+                This application is designed with the aim of assisting counseling teachers at a Junior High School under study in grouping student groups 
                 with student learning styles and the help of the average final grades of students in the previous semester. There is no special algorithm in 
                 this application, only basic algorithms such as grouping and equalising the average final grade of each student so that each student group has 
                 a balance of academic abilities, and creating differentiated learning in the classroom.
@@ -123,7 +123,7 @@
                 difficulty thinking systematically when using the application, so it is necessary to train or provide a more detailed user guide.
               </p>
               <p style="text-align: justify;">
-                In this application, that have some pages and features, such as:
+                You can find the website version from this app on <a href="https://noncognitive.my.id/" target="_blank">this link</a>. In this application, that have some pages and features, such as:
               </p>
               <ul>
                 <li><b>Onboarding</b>, you can find this when you use the application for the first time.</li>
