--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/aldi128px.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/foto_ijazah_128.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Aldi Saepurahman</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/aldi-saepurahman/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
@@ -62,7 +62,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <img src="assets/img/aldi128px.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/foto_ijazah_128.jpg" alt="" class="img-fluid rounded-circle">
       <h1>Aldi Saepurahman</h1>
       <p>I'm <span class="typed" data-typed-items="Mobile Developer"></span></p>
       <a href="#portfolio" class="btn btn-secondary">See Portfolio</a>
@@ -86,7 +86,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/aldibg.jpg" class="img-fluid" alt="">
+            <img src="assets/img/foto_ijazah_s1.jpg " class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Mobile Developer</h3>
@@ -252,10 +252,6 @@
             </div>
 
             <div class="progress">
-              <span class="skill">C++ <i class="val">Intermediate</i></span>
-            </div>
-
-            <div class="progress">
               <span class="skill">Kotlin Android <i class="val">Expert</i></span>
             </div>
 
@@ -264,7 +260,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Reactive Programming <i class="val">Intermediate</i></span>
+              <span class="skill">Android MVVM <i class="val">Advanced</i></span>
             </div>
 
           </div>
@@ -273,10 +269,6 @@
 
             <div class="progress">
               <span class="skill">Git <i class="val">Advanced</i></span>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Clean Architecture <i class="val">Intermediate</i></span>
             </div>
 
             <div class="progress">
@@ -312,7 +304,7 @@
 
         <div class="section-title">
           <h2>CV</h2>
-          <div class="text-center"><a href="https://drive.google.com/file/d/18gscNwHqJR8TUrXF0x5sSNbvZncyk9AF/view?usp=sharing" target="_blank" class="btn-submit">Download CV</a></div>
+          <div class="text-center"><a href="https://drive.google.com/file/d/1kSEz1y5AJtxy4wlQjEnAtih7AA1IkrWE/view?usp=sharing" target="_blank" class="btn-submit">Download CV</a></div>
         </div>
 
         <!-- <div class="row">
