--- a/portfolio_pages/trip-aja-details.html
+++ b/portfolio_pages/trip-aja-details.html
@@ -39,7 +39,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="../assets/img/aldi128px.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="../assets/img/foto_ijazah_128.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="../index.html">Aldi Saepurahman</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/aldi-saepurahman/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
