--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p style="text-align: justify;">An undergraduate Computer Science student at Universitas Pendidikan Indonesia. Had been Lecturer Assistant for several subjects such as Algorithms and Programming,
+          <p style="text-align: justify;">A fresh graduate from Computer Science student at Universitas Pendidikan Indonesia. Had been Lecturer Assistant for several subjects such as Algorithms and Programming,
             Data Structure, and Object-Oriented Programming. Have experience in organization like BEM in KEMAKOM FPMIPA Universitas Pendidikan Indonesia as Head of Technology in 2020 and
             as Head of Programming Community in OSTRIC KEMAKOM FPMIPA UPI in the following year. One of the Bangkit Graduate 2022 from Mobile Development Learning Path and become a Google Certified Associate Android Developer from
             this program.</p>
