--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p style="text-align: justify;">A fresh graduate from Computer Science student at Universitas Pendidikan Indonesia. Had been Lecturer Assistant for several subjects such as Algorithms and Programming,
-            Data Structure, and Object-Oriented Programming. Have experience in organization like BEM in KEMAKOM FPMIPA Universitas Pendidikan Indonesia as Head of Technology in 2020 and
-            as Head of Programming Community in OSTRIC KEMAKOM FPMIPA UPI in the following year. One of the Bangkit Graduate 2022 from Mobile Development Learning Path and become a Google Certified Associate Android Developer from
-            this program.</p>
+          <p style="text-align: justify;">Graduated from Bangkit Academy 2022 and become a Google Certified Associate Android Developer in the same year, 
+            have interest and experience in learning Mobile Development using Kotlin and Flutter, and have interest to learn more about Mobile Development 
+            from experts.</p>
         </div>
 
         <div class="row">
@@ -130,9 +129,8 @@
               </div>
             </div>
             <p style="text-align: justify;">
-              I have an interest in Mobile Development, like Android Development, then have more experience in Android Programming using Kotlin when i joined Bangkit Academy in 2022,
-              until become a Google Certified Associate Android Developer at the end of program. I have interested in learning Flutter to develop multi-platform application, and then have excellent logical skills and algorithmic thinking,
-              and a strong understanding of Mobile Programming such as creating MVVM architecture in a Mobile app. In the future, i want to join with IT Company or Startup to get more experience about Mobile Development from experts and improve
+              I have an interest in Mobile Development, like Android Development, then have more experience in Android Programming using Flutter & Kotlin, and become a Google Certified Associate Android Developer. I have developed several applications using Flutter for Android and websites, 
+              especially applications for my thesis, and then once became a programming course assistant to help my friends complete the programming course well. In the future, i want to join with IT Company or Startup to get more experience about Mobile Development from experts and improve
               my Company or Startup into peak level.
             </p>
           </div>
