--- a/portfolio_pages/heal-and-go-details.html
+++ b/portfolio_pages/heal-and-go-details.html
@@ -98,7 +98,7 @@
         </div>
 
         <div class="col-lg-12">
-          <iframe src="../assets/img/healandgo/healandgo.pdf" width="100%" height="700"></iframe>
+          <iframe src="https://drive.google.com/file/d/1iKZ1a0RTsIBsiUFR7l9Ew60HggBsnrpX/preview" width="100%" height="700"></iframe>
         </div>
 
           <div id="descriptions" class="col-lg-12">
