--- a/portfolio_pages/rongga-details.html
+++ b/portfolio_pages/rongga-details.html
@@ -98,7 +98,7 @@
         </div>
 
           <div class="col-lg-12">
-            <iframe src="../assets/img/rongga/rongga.pdf" width="100%" height="700"></iframe>
+            <iframe src="https://drive.google.com/file/d/15BMVaIh8as1TVxB2z-Z7YHrsYQl97Kqv/preview" width="100%" height="700"></iframe>
           </div>
 
           <div id="descriptions" class="col-lg-12">
