--- a/portfolio_pages/stikes-details.html
+++ b/portfolio_pages/stikes-details.html
@@ -98,7 +98,7 @@
         </div>
 
         <div class="col-lg-12">
-          <iframe src="../assets/img/stikes/SIAKSTIKES.pdf" width="100%" height="700"></iframe>
+          <iframe src="https://drive.google.com/file/d/17jOygLkM7cMjQCLil3A5kwE669oLk5Xi/preview" width="100%" height="700"></iframe>
         </div>
 
           <div id="descriptions" class="col-lg-12">
