--- a/portfolio_pages/trip-aja-details.html
+++ b/portfolio_pages/trip-aja-details.html
@@ -98,7 +98,7 @@
         </div>
 
           <div class="col-lg-12">
-            <iframe src="../assets/img/tripaja/TripAja.pdf" width="100%" height="700"></iframe>
+            <iframe src="https://drive.google.com/file/d/1Hot8b9w9bmdXsPXF7hQE8gAAdbEchJpi/preview" width="100%" height="700"></iframe>
           </div>
 
           <div id="descriptions" class="col-lg-12">
