update landing page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="hero-container" data-aos="fade-in">
       <img src="assets/img/foto_ijazah_128.jpg" alt="" class="img-fluid rounded-circle">
       <h1>Aldi Saepurahman</h1>
-      <p>I'm <span class="typed" data-typed-items="Mobile Developer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Software Engineer"></span></p>
       <a href="#portfolio" class="btn btn-secondary">See Portfolio</a>
         <a href="https://www.linkedin.com/in/aldi-saepurahman/" target="_blank" class="btn btn-light">See My Linkedin</a>
     </div>
@@ -78,9 +78,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p style="text-align: justify;">Graduated from Bangkit Academy 2022 and become a Google Certified Associate Android Developer in the same year, 
-            have interest and experience in learning Mobile Development using Kotlin and Flutter, and have interest to learn more about Mobile Development 
-            from experts.</p>
+          <p style="text-align: justify;">Graduated from Bangkit Academy 2022 and become a Google Certified Associate Android Developer 
+            in the same year, have interest and experience in learning Software Development using Kotlin, Flutter, and Laravel, and have 
+            interest to learn more about Software Engineering from experts, especially in Mobile Development.</p>
         </div>
 
         <div class="row">
@@ -131,7 +131,7 @@
             <p style="text-align: justify;">
               I have an interest in Mobile Development, like Android Development, then have more experience in Android Programming using Flutter & Kotlin, and become a Google Certified Associate Android Developer. I have developed several applications using Flutter for Android and websites, 
               especially applications for my thesis, and then once became a programming course assistant to help my friends complete the programming course well. In the future, i want to join with IT Company or Startup to get more experience about Mobile Development from experts and improve
-              my Company or Startup into peak level.
+              my Company or Startup into peak level. Besides mobile development, I have also developed several website projects using Laravel.
             </p>
           </div>
         </div>
@@ -261,9 +261,17 @@
               <span class="skill">Android MVVM <i class="val">Advanced</i></span>
             </div>
 
+            <div class="progress">
+              <span class="skill">PHP/Laravel <i class="val">Expert</i></span>
+            </div>
+
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="progress">
+              <span class="skill">Javascript <i class="val">Advanced</i></span>
+            </div>
 
             <div class="progress">
               <span class="skill">Git <i class="val">Advanced</i></span>
@@ -302,7 +310,7 @@
 
         <div class="section-title">
           <h2>CV</h2>
-          <div class="text-center"><a href="https://drive.google.com/file/d/1kSEz1y5AJtxy4wlQjEnAtih7AA1IkrWE/view?usp=sharing" target="_blank" class="btn-submit">Download CV</a></div>
+          <div class="text-center"><a href="https://drive.google.com/file/d/1HgxacUjIL-FF5GREY4veVZeN-4_2OvzN/view?usp=sharing" target="_blank" class="btn-submit">Download CV</a></div>
         </div>
 
         <!-- <div class="row">
