--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="hero-container" data-aos="fade-in">
       <img src="assets/img/foto_ijazah_128.jpg" alt="" class="img-fluid rounded-circle">
       <h1>Aldi Saepurahman</h1>
-      <p>I'm <span class="typed" data-typed-items="Software Engineer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Mobile Developer"></span></p>
       <a href="#portfolio" class="btn btn-secondary">See Portfolio</a>
         <a href="https://www.linkedin.com/in/aldi-saepurahman/" target="_blank" class="btn btn-light">See My Linkedin</a>
     </div>
